# sysvis

./: .gitignore  README.md  pyproject.toml  setup.py  test.py
sysvis/: __init__.py  __main__.py
sysvis/collectors/: __init__.py  system.py
sysvis/views/: __init__.py  _helpers.py  cpu.py  disk.py  gpu.py  health.py  live.py  memory.py  menu.py  network.py  processes.py  sysinfo.py
