[build-system]
requires      = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "sysvis"
version         = "1.1.0"
description     = "Arrow-key terminal system monitor with actionable insights"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.8"
keywords        = ["system", "monitor", "psutil", "terminal", "performance", "insights"]

dependencies = [
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "py-cpuinfo>=9.0.0",
]

[project.optional-dependencies]
gpu = ["gputil>=1.4.0"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
sysvis = "sysvis.__main__:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["sysvis*"]